Also Edit recently-used.xbel when forgetting resources

* clear the KRecentDocument history on forgetAll
 * remove application entries in KRecentDocument when forgetting an
   application
 * remove the file entries from KRecentDocument when removing its
   history

BUG: 480276